【功能】修改包名为com.liuzm

--- a/pom.xml
+++ b/pom.xml
@@ -39,9 +39,9 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.tay</groupId>
+			<groupId>com.liuzm.paascloud</groupId>
 			<artifactId>dynamicDS-spring-boot-starter</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
